[gd_scene load_steps=3 format=2]

[ext_resource path="res://game_demos/run_and_jump/assets/title.png" type="Texture" id=1]
[ext_resource path="res://game_demos/run_and_jump/Menu.gd" type="Script" id=2]

[node name="Menu" type="VBoxContainer"]
margin_right = 512.0
margin_bottom = 560.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleTextureRect" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 256.0
rect_min_size = Vector2( 512, 256 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 147.0
margin_top = 265.0
margin_right = 365.0
margin_bottom = 279.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 142.0
margin_bottom = 14.0
text = "current Highest Score:"

[node name="HighScoreLabel" type="Label" parent="HBoxContainer"]
margin_left = 146.0
margin_right = 218.0
margin_bottom = 14.0
text = "000000000"

[node name="PlayButton" type="Button" parent="."]
margin_top = 288.0
margin_right = 512.0
margin_bottom = 308.0
text = "Play"

[node name="ExitButton" type="Button" parent="."]
margin_top = 317.0
margin_right = 512.0
margin_bottom = 337.0
text = "Exit"
